# graph_rag

./: obsidian_embeddings.ipynb  prompts.py  pyproject.toml
